--- a/Index.html
+++ b/Index.html
@@ -10,5 +10,13 @@
     <p>ICAH all day, everyday</p>
     <a href="https://www.imperial.ac.uk/advanced-hackspace/">Hackspac Webpage</a>
 
+    <h2>My List</h2>
+      <ol>
+        <li>Ready</li>
+        <li>Set</li>
+        <li>Go</li>
+
+        
+
   </body>
 </html>
