--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <!-- <head>
 
     <title></title>
-  </head>
+  </head> -->
 
   <body>
     <h2>I <3 my Hackspace</h2>
