--- a/Index.html
+++ b/Index.html
@@ -50,8 +50,8 @@
   </nav>
 
   <!-- Header - set the background image for the header in the line below -->
-  <header class="py-5 bg-image-full" style="background-image: url('https://unsplash.it/1900/1080?image=1076');">
-    <img class="img-fluid d-block mx-auto" src="C:\Users\campb\Documents\GitHub\Horizons\Images\IMG_0136.HEIC" alt="">
+  <header class="py-5 bg-image-full" style="background-image: url('https://lh3.googleusercontent.com/G3R_Tghj1f8MyTzlnw3-uz-3fFL8hzjeVg5nYUwEMzyXImbjO_ULhSonwMeoJTOJUmdtEK8AWXqG7dNdmy4ccF55lX5G-OeV0Scp9IYGfVbeTgBQ5ex2bQQ-NZX3FpnMXrKaJRbTd970Kz7erONxKGXCHAAUOTF3roHuT7XnrVg9Ny83gPCPfaOhh-BjjKSaAp_y4YkHdMppdIqxKgrc6LKv40AqWJq1Fv6GyAawHvOlrf2jUlGoWyRFXV6ge78GhvrcMg7xHm6cTnExfvUhskwg_lZOE_CjaX3rp-7rQqrMHFIvoI4WqDpzWVJjCBFNqtPV4yGghfHnY2RvufL8xYNG2u5zc8YxphgeCsZo4vhAnTOjvqDYNhobKEdUwBv0FW-w7aFHcs-Fx7Bqxbk_RIiIiNHKKy8fKBUEMv1gGoUG27m7fZE48cghpCU_8Wi7Yce-ic4ZThogmAbnZ2-DzFOj_h9xGw6JV5Hrnxu0xKh4733hrOjgsp2_bl9hUmIctlVb45qc9t3FKNNXHMLM1VahZ8AkxhynZ1R-PtfbXx1c_0gHhI4HchEcKPrJZS5G0Er4vG6K_iHfdki4tMRjkb2bWRc8HHU4E6y2BB_nAJUuyK9-sGI5ixJOJmoTfm4sLkWEvm2XYuSjLyhezCa-2I1XVYBpxapL2Em4FX-5DDGuhOabiikSRg=w711-h947-no');">
+    <img class="img-fluid d-block mx-auto" src="http://placehold.it/200x200&text=Logo" alt="">
   </header>
 
   <!-- Content section -->
