--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="navbar-brand" href="#">Start Bootstrap
+        <img url('https://cdn.imgbin.com/20/5/1/imgbin-imperial-college-london-university-research-student-london-K2VukwNpimimETP4Myr3061m8.jpg');>
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
