--- a/Index.html
+++ b/Index.html
@@ -24,8 +24,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap
-        <img src= "C:\Users\campb\Documents\GitHub\Horizons\Images\IMP_Logo.jpg">
+      <a class="navbar-brand" href="https://www.imperial.ac.uk/">
+        <img src= "C:\Users\campb\Documents\GitHub\Horizons\Images\IMP_Logo.jpg" class="w3-image">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
