--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,10 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="https://www.imperial.ac.uk/">
-        <img src= "C:\Users\campb\Documents\GitHub\Horizons\Images\IMP_Logo.jpg" class="w3-image">
+        <img src= "C:\Users\campb\Documents\GitHub\Horizons\Images\IMP_Logo.jpg" width="40" height="40">
+      </a>
+      <a class="navbar-brand" href="https://www.imperial.ac.uk/enterprise/students/advanced-hackspace/">
+        <img src= "C:\Users\campb\Documents\GitHub\Horizons\Images\HACKSPACE_Logo.jpg" width="40" height="40">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -38,13 +41,16 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="#">Our Product</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Our Team</a>
           </li>
         </ul>
       </div>
@@ -81,12 +87,186 @@
   </section>
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
+
+  <footer class="footer">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <h1 class="sr-only">Contact &amp; Links</h1>
+
+      <!-- navigation object : Local Footer -->
+      <!-- navigation object : Comment Start --><!-- navigation object : Global Footer pre direct edit --><!-- begin Global footer -->
+      <section class="footer-links row equal-height-columns">
+        <h2 class="sr-only">Useful Links</h2>
+        <div class="col lg-2 md-4 sm-6 equal-height">
+          <nav>
+            <h3 class="fake-h2 title">
+                Information for
+            </h3>
+            <ul>
+              <li><a href="/study/">Prospective students</a></li>
+              <li><a href="/alumni/">Alumni</a></li>
+              <li><a href="/jobs/">Jobs</a></li>
+              <li><a href="/research-and-innovation/support-for-partners/">Partners and business</a></li>
+              <li><a href="/media/">Media</a></li>
+              <li><a href="/giving/">Donors</a></li>
+              <li><a href="/parents/">Parents</a></li>
+              <li><a href="http://www.imperialvenues.co.uk/" target="_blank">Conference organisers</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="col lg-2  md-4 sm-6 equal-height">
+          <nav>
+            <h3 class="fake-h2 title">
+                Top links
+            </h3>
+            <ul>
+              <li><a href="/about/imperial-and-the-european-union/">Imperial and the EU</a></li>
+              <li><a href="https://www.imperial.ac.uk/office365" target="_blank">Outlook 365 web access</a></li>
+              <li><a href="/admin-services/ict/contact-ict-service-desk/">Contact the ICT Service Desk</a></li>
+              <li><a href="/admin-services/library/">Library</a></li>
+              <li><a href="/admin-services/ict/self-service/teaching-learning/blackboard/">Blackboard</a></li>
+              <li><a href="/admin-services/sport/">Sport</a></li>
+              <li><a href="/admin-services/registry/term-dates/">Term dates</a></li>
+            </ul>
+        </nav>
+      </div>
+      <div class="col lg-2  md-4 sm-6 equal-height">
+        <nav>
+            <h3 class="fake-h2 title">
+                Students
+            </h3>
+            <ul>
+              <li><a href="/students/">Imperial students</a></li>
+              <li><a href="https://www.imperialcollegeunion.org/" target="_blank">Imperial College Union</a></li>
+              <li><a href="/students/student-hub/">Student Hub</a></li>
+              <li><a href="/admin-services/careers/">Careers Service</a></li>
+              <li><a href="/students/online-services/mobile/">Imperial Mobile</a></li>
+              <li><a href="/students/graduation/">Graduation</a></li>
+            </ul>
+        </nav>
     </div>
-    <!-- /.container -->
-  </footer>
+    <div class="col lg-2  md-4 sm-6 equal-height">
+        <nav>
+            <h3 class="fake-h2 title">
+                Staff
+            </h3>
+            <ul>
+<li><a href="/staff/">Staff main page</a></li>
+<li><a href="/admin-services/ict/self-service/admin-systems/icis/">ICIS</a></li>
+<li><a href="/admin-services/human-resources/procedures/">HR procedures</a></li>
+<li><a href="/admin-services/human-resources/salaries-terms-and-conditions/">Salaries, Terms and Conditions</a></li>
+<li><a href="/admin-services/human-resources/working-at-imperial/pension-schemes/">Pension schemes</a></li>
+<li><a href="/research-and-innovation/support-for-staff/">Research support</a></li>
+<li><a href="/staff/new-staff/">Information for new staff</a></li>
+</ul>
+        </nav>
+    </div>
+    <div class="col lg-2  md-4 sm-6 equal-height">
+        <nav>
+            <h3 class="fake-h2 title">
+                Imperial partners
+            </h3>
+            <ul>
+<li><a href="http://www.imperial.nhs.uk/" target="_blank">Imperial College Healthcare NHS Trust</a></li>
+<li><a href="http://www.ahsc.org.uk/" target="_blank">Imperial College Academic Health Science Centre</a></li>
+<li><a href="http://imperialcollegehealthpartners.com/" target="_blank">Imperial College Health Partners</a></li>
+<li><a href="http://www.imperial-consultants.co.uk/" target="_blank">Imperial Consultants</a></li>
+</ul>
+        </nav>
+    </div>
+    <div class="col lg-2  md-4 sm-6 equal-height">
+        <nav>
+            <h3 class="fake-h2 title">
+                A-Z
+            </h3>
+            <ul>
+<li><a href="/faculties-and-departments/">Faculties, departments and institutes</a></li>
+<li><a href="/a-z-research/">Research groups</a></li>
+<li><a href="/admin-services/">Administration and support services</a></li>
+<li><a href="http://www.imperial.ac.uk/collegedirectory/" target="_blank">People finder</a></li>
+</ul>
+        </nav>
+    </div>
+</section>
+<!-- Footer Links End -->
+<section class="footer-common row" itemscope="" itemtype="http://schema.org/CollegeOrUniversity">
+    <h2 class="sr-only">College Information</h2>
+    <div class="col lg-2 md-3 sm-12" id="footer-contact">
+        <a href="#" class="footer-brand">
+            <span itemprop="name">Imperial College London<span>
+        </span></span></a>
+        <meta itemprop="url" content="https://www.imperial.ac.uk/">
+        <meta itemprop="image" content="https://www.imperial.ac.uk/ImageCropToolT4/imageTool/uploaded-images/homepage-default-social--tojpeg_1523872141375_x1.jpg">
+        <meta itemprop="logo" content="https://www.imperial.ac.uk/assets/website/images/logo/imperial-600.png">
+        <meta itemprop="sameAs" content="https://en.wikipedia.org/wiki/Imperial_College_London">
+        <h3 class="sr-only">Address</h3>
+        <div class="address">
+            <p itemscope="" itemtype="http://schema.org/PostalAddress" itemprop="address">
+                <span itemprop="name">South Kensington Campus</span><br><span itemprop="addressLocality">London</span> <span itemprop="postalCode">SW7 2AZ</span>, <span itemprop="addressCountry">UK</span><br><span itemprop="telephone">tel: +44 (0)20 7589 5111</span>
+                <br>
+                <a href="/visit/campuses/" class="location-link">
+                Campuses &amp; maps
+                </a>
+            </p>
+        </div>
+    </div>
+    <div class="col lg-10 md-9 sm-12" id="footer-connect">
+        <h3 class="title">Follow Imperial</h3>
+        <div class="footer-social sm-10">
+            <a href="https://www.facebook.com/imperialcollegelondon" class="facebook" target="_blank" itemprop="sameAs">Facebook</a>
+            <a href="https://twitter.com/imperialcollege" class="twitter" target="_blank" itemprop="sameAs">Twitter</a>
+            <a href="https://www.youtube.com/user/imperialcollegevideo" class="youtube" target="_blank" itemprop="sameAs">You Tube</a>
+            <a href="https://www.linkedin.com/edu/imperial-college-london-12598" class="linkedin" target="_blank" itemprop="sameAs">Linked in</a>
+            <a href="https://instagram.com/imperialcollege" class="instagram" target="_blank" itemprop="sameAs">Instagram</a>
+            <a href="https://www.weibo.com/ImperialUK" class="weibo" target="_blank" itemprop="sameAs">Weibo</a>
+
+        </div>
+
+    <nav id="footer-info">
+        <h3 class="sr-only">Site Information</h3>
+        <ul>
+
+        <li>
+    <a href="/sitemap/">Sitemap</a>
+   </li>
+
+
+        <li>
+    <a href="/about-the-site/accessibility/">Accessibility</a>
+   </li>
+
+
+
+        <li>
+    <a href="/admin-services/finance/purchasing/related-policy-statements/modern-slavery/">Modern slavery statement</a>
+   </li>
+
+
+
+        <li>
+    <a href="/about-the-site/privacy/">Privacy notice</a>
+   </li>
+
+
+
+        <li>
+    <a href="/error/report/">Report incorrect content</a>
+   </li>
+
+            <li class="copyright">
+                <span>©
+                    2020                    Imperial College London
+                </span>
+            </li>
+            <li class="hide-sm">
+<a class="t4Edit-page" href="https://www.imperial.ac.uk/terminalfour/SiteManager?ctfn=content&amp;fnno=30&amp;sid=213067">Log in</a>
+<!-- navigation object : Global Footer post direct edit -->                    </li>
+                  </ul>
+                </nav>
+              </div>
+            </section>
+          </div>
+        <!-- end Global footer -->
+      </footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
