--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="https://www.imperial.ac.uk/">
-        <img src= "C:\Users\campb\Documents\GitHub\Horizons\Images\IMP_Logo.jfif" width="40" height="40">
+        <img src= "Images\IMP_Logo.jfif" width="40" height="40">
       </a>
       <a class="navbar-brand" href="https://www.imperial.ac.uk/enterprise/students/advanced-hackspace/">
         <img src= "C:\Users\campb\Documents\GitHub\Horizons\Images\HACKSPACE_Logo.jfif" width="40" height="40">
