--- a/Index.html
+++ b/Index.html
@@ -32,10 +32,10 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="https://www.imperial.ac.uk/">
-        <img src= "C:\Users\campb\Documents\GitHub\Horizons\Images\IMP_Logo.jfif" width="40" height="40">
+        <img src= "Images\IMP_Logo.jfif" width="40" height="40">
       </a>
       <a class="navbar-brand" href="https://www.imperial.ac.uk/enterprise/students/advanced-hackspace/">
-        <img src= "C:\Users\campb\Documents\GitHub\Horizons\Images\HACKSPACE_Logo.jfif" width="40" height="40">
+        <img src= "Images\HACKSPACE_Logo.jfif" width="40" height="40">
       </a>
       <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color:#ff0000">Blackbox</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -85,17 +85,17 @@
           <p class="text-primary"  width="80">
           The manual development of photographs is a traditional practice that has been upheld due to its versatile possibilities. Fanatics have preserved this craft despite the advances in printing technology to maintain the integrity and the true authenticity of the craft. Although, this craft is desired to be maintained there is no reason why the way of developing prints couldn’t be automated whilst upholding the purity of the process and maintaining artistic freedoms. 'Blackbox' is a new way for photographic artists to develop their wall prints in a dark room. It aims to overcome the inconveniences of dark room work whilst providing a consistent finish to prints. As well as this because 'Blackbox' is programmable for the user - it allows artists to retain their freedoms from hand printings, such as exposure time, temperature etc... </p>
           <figure>
-              <img src='C:\Users\campb\Documents\GitHub\Horizons\Images\CAD1.jfif' alt='Pre manufacture design drawing of machine' style="width:500px;height:400px;"/>
+              <img src='Images\CAD1.jfif' alt='Pre manufacture design drawing of machine' style="width:500px;height:400px;"/>
               <figcaption>Proposed design for 'Blackbox'</figcaption>
            </figure>
            <figure>
-               <img src='C:\Users\campb\Documents\GitHub\Horizons\Images\Wall.jpg' alt='Wall covered it photo prints' style="width:400px;height:500px;"/>
+               <img src='Images\Wall.jpg' alt='Wall covered it photo prints' style="width:400px;height:500px;"/>
                <figcaption>Wall prints</figcaption>
             </figure>
            <h2 class="section-heading text-uppercase">How does it work?</h2>
           <p class="text-primary">'Blackbox' aims to deliver flawless wall prints, but how does it work? Photography enuthisasts will know that developing wall prints from film occurs in 3 main steps, these are illustrated in the picture below.</p>
           <figure>
-              <img src='C:\Users\campb\Documents\GitHub\Horizons\Images\Process.png' alt='Photo printing process'/>
+              <img src='Images\Process.png' alt='Photo printing process'/>
            </figure>
            <p class="text-primary">So where does 'Blackbox' come in? Blackbox, once complete, will deliver on these main specification points:</p>
            <ol>
@@ -132,7 +132,7 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="C:\Users\campb\Documents\GitHub\Horizons\Images\Hackspace.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="Images\Hackspace.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -146,7 +146,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="C:\Users\campb\Documents\GitHub\Horizons\Images\Darkroom.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="Images\Darkroom.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -160,7 +160,7 @@
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="C:\Users\campb\Documents\GitHub\Horizons\Images\Team.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="Images\Team.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -174,7 +174,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="C:\Users\campb\Documents\GitHub\Horizons\Images\Working.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="Images\Working.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -212,7 +212,7 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="https://raw.githubusercontent.com/CPollo/Horizons/master/Images/Cam.JPG" alt="">
+            <img class="mx-auto rounded-circle" src="Images\Cam.jpg" alt="">
             <h4>Campbell Pollock </h4>
             <p class="text-muted">Technical Officer</p>
             <p class="text-primary">Campbell is a 4th Year Mechanical Engineering undergraduate and his skills in CAD and manufacture have been recognised to give him responsibility for the technical systems in the product. His passion for provblem solving should be useful for any tech-related issues in the product.</p>
@@ -237,7 +237,7 @@
         </div>
         <div class="col-sm-6">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="C:\Users\campb\Documents\GitHub\Horizons\Images\Jess.jpeg" alt="">
+            <img class="mx-auto rounded-circle" src="Images\Jess.jpeg" alt="">
             <h4>Jess Powell</h4>
             <p class="text-muted">Creative Officer</p>
             <p class="text-primary">Jess is the driving creative force on the team, being a 3rd Year Design Engineer it makes her well suited to this role. Her design work on optimising user interface and product aesthetic will prove to be a valuable skill. She'll focus on creating a bran identity and adhering to it.</p>
@@ -262,7 +262,7 @@
         </div>
         <div class="col-sm-6">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="C:\Users\campb\Documents\GitHub\Horizons\Images\Dennis.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="Images\Dennis.jpg" alt="">
             <h4>Dennis Ampontuah</h4>
             <p class="text-muted">Information Officer</p>
             <p class="text-primary">Dennis is a 4th Year Mechanical Engineering student with a keen interest in new technology, it's a field he wants to pursue professionally after completing his degree. Dennis' skills in testing and coding will be utilised to complete our product.</p>
@@ -287,7 +287,7 @@
         </div>
         <div class="col-sm-6">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="C:\Users\campb\Documents\GitHub\Horizons\Images\Marij.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="Images\Marij.jpg" alt="">
             <h4>Marij Qureshi</h4>
             <p class="text-muted">Operating Officer</p>
             <p class="text-primary">Marij is completing his 4th Year in Aeronautical Engineering with a focus on entering the world of management consultancy. His organisational skill and planning will aim to keep to the group on track to deliver what they promise. He will also focuse on ensuring we deliver a tailored product for the customer, from agile interaction.</p>
