--- a/Index.html
+++ b/Index.html
@@ -212,7 +212,7 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="Images\Cam.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="https://raw.githubusercontent.com/CPollo/Horizons/master/Images/Cam.JPG" alt="">
             <h4>Campbell Pollock </h4>
             <p class="text-muted">Technical Officer</p>
             <p class="text-primary">Campbell is a 4th Year Mechanical Engineering undergraduate and his skills in CAD and manufacture have been recognised to give him responsibility for the technical systems in the product. His passion for provblem solving should be useful for any tech-related issues in the product.</p>
